feat: add close functionality on click outside and escape key for NumberSelector
- Also include accessbility to NumberSelector

--- a/src/components/Cell/NumberSelector.css
+++ b/src/components/Cell/NumberSelector.css
@@ -17,8 +17,12 @@
 }
 
 @keyframes scaleIn {
-  from { transform: scale(0.1) }
-  to   { transform: scale(1) }
+  from {
+    transform: scale(0.6);
+  }
+  to {
+    transform: scale(1);
+  }
 }
 
 .number-option {
