--- a/src/components/Cell/Cell.css
+++ b/src/components/Cell/Cell.css
@@ -1,7 +1,7 @@
 .cell {
   /* remove default button css */
   padding: 0;
-  border: none;
+  /* border: none; */
   font: inherit;
   outline: inherit;
   /* remove default button css */
@@ -13,6 +13,7 @@
   gap: 3px 5px;
   background-color: #414141; /* for testing, TODO: need to make dynamic through config */
   position: relative;
+  border: 1px solid #b8b8ed;
 }
 
 .cell .candidate {
