--- a/src/components/House.css
+++ b/src/components/House.css
@@ -1,10 +1,8 @@
 .house-container {
-  width: 195px;
-  height: auto;
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: column;
-  /* box-sizing: border-box; */
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(3, 1fr);
+  border: 1px solid #b8b8ed;
 }
 
 .house-cell-container {
