--- a/src/components/Cell/Cell.css
+++ b/src/components/Cell/Cell.css
@@ -14,6 +14,10 @@
   border: 1px solid #b8b8ed;
 }
 
+.cell.selected {
+  background-color: #6b36ef;
+}
+
 .cell .candidate {
   cursor: pointer;
   width: 100%;
