feat: add global styles for consistent theming and layout
- add to Storybook preview.ts for all stories to use

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -13,4 +13,8 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  --colour-primary: #4a90e2;
+  --colour-board: #414141;
+  --colour-danger: #e74c3c;
 }
