--- a/src/components/Cell/NumberSelector.module.css
+++ b/src/components/Cell/NumberSelector.module.css
@@ -1,4 +1,4 @@
-.number-selector {
+.numberSelector {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(4, 1fr);
@@ -22,7 +22,7 @@
   }
 }
 
-.number-option {
+.numberOption {
   width: 50px;
   height: 50px;
     /* remove default button css */
@@ -35,17 +35,21 @@
   background-color: #9696f0;
   color: white;
   font-weight: 800;
-  transition: font-size 0.3s ease;
 }
 
-.number-selector .eraser {
+.numberOption.eraser {
   grid-column: -3 / -2;
   border-bottom-left-radius: 15px;
   border-bottom-right-radius: 15px;
 }
 
-.number-option:hover {
-  text-shadow: #3d1df4 0 0 25px;
+.numberText {
+  display: inline-block;
+  transition: font-size 0.3s ease;
+}
+
+.numberOption:hover .numberText {
+  filter: drop-shadow(0 0 15px #3d1df4);
   font-size: 44px;
-  color: #dad5f6;
+  /* color: #dad5f6; makes text a little purple, I like just white though */
 }
