refactor: migrate GameBoard styles to CSS modules

--- a/src/components/GameBoard.module.css
+++ b/src/components/GameBoard.module.css
@@ -5,7 +5,7 @@
   align-items: center;
 }
 
-.game-board-container {
+.gameBoardContainer {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(3, 1fr);
