refactor: update CSS variables for consistent theming across components

--- a/src/components/Box.module.css
+++ b/src/components/Box.module.css
@@ -2,7 +2,7 @@
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(3, 1fr);
-  border: 1px solid #b8b8ed;
+  border: 1px solid var(--color-border-cell);
 }
 
 .borderLeftThick1 {
