--- a/src/components/GameBoard.module.css
+++ b/src/components/GameBoard.module.css
@@ -9,5 +9,5 @@
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(3, 1fr);
-  border: 1px solid #b8b8ed;
+  border: 1px solid var(--color-border-cell);
 }
