--- a/src/components/Cell/Cell.module.css
+++ b/src/components/Cell/Cell.module.css
@@ -57,6 +57,8 @@
 .cellNumber {
   font-size: 50px;
   font-weight: 550;
+  cursor: pointer;
+  user-select: none;
   color: var(--color-text-number);
   grid-column: 2 / 3;
   grid-row: 2 / 3;
