--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,19 +1,37 @@
-* {
+html {
   box-sizing: border-box;
 }
 
-:root {
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+  margin: 0;
+  padding: 0;
+}
+
+/* ===== Base Styles ===== */
+html {
+  scroll-behavior: smooth;
+}
+
+body {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
+  min-height: 100vh;
 
   color-scheme: light dark;
+  /* color: var(--text-primary); */
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  /* background: var(--bg-primary); */
+  background: #242424;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
 
+:root {
   --color-primary: #4a90e2;
   --color-danger: #e74c3c;
 
