--- a/src/components/Box.module.css
+++ b/src/components/Box.module.css
@@ -2,7 +2,7 @@
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(3, 1fr);
-  border: 1px solid var(--color-border-cell);
+  border: 3px solid var(--cell-border-default);
 }
 
 .borderLeftThick1 {
