chore: add a md border around gameboard

--- a/src/components/GameBoard.module.css
+++ b/src/components/GameBoard.module.css
@@ -10,4 +10,6 @@
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(3, 1fr);
   border: 2px solid var(--cell-border-default);
+  border-radius: var(--radius-md);
+  overflow: hidden;
 }
