feat: first cut of cell value validation

--- a/src/components/Cell/Cell.module.css
+++ b/src/components/Cell/Cell.module.css
@@ -22,6 +22,10 @@
   background-color: var(--cell-bg-selected);
 }
 
+.cell.conflict {
+  background-color: var(--cell-bg-error);
+}
+
 .cell .candidate {
   cursor: pointer;
   width: 100%;
