test: add conflicted storybook cell test
- change CSS class from `conflict` to `conflicted` to better repersent functionality

--- a/src/components/Cell/Cell.module.css
+++ b/src/components/Cell/Cell.module.css
@@ -22,7 +22,7 @@
   background-color: var(--cell-bg-selected);
 }
 
-.cell.conflict {
+.cell.conflicted {
   background-color: var(--cell-bg-error);
 }
 
