--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -26,7 +26,8 @@ html {
   --color-border-subtle: var(--stone-8);
   --color-border-error: var(--red-10);
 
-  --color-shadow-error: var(--red-6);
+  --color-shadow-error-hsl: var(--red-6-hsl);
+  --color-shadow-ring-error-hsl: var(--red-8-hsl);
 
   --accent-primary: #f59e0b;
   --accent-secondary: #ef4444;
@@ -57,7 +58,9 @@ html {
   --cell-text-error: var(--color-text-error);
 
   --cell-border-default: var(--color-border-default);
-  --cell-border-error-glow: color-mix(in srgb, var(--red-8) 45%, transparent);
+
+  --cell-shadow-error-ring: hsl(var(--color-shadow-ring-error-hsl) / 55%);
+  --cell-shadow-error-glow: hsl(var(--color-shadow-error-hsl) / 40%);
 
   /* 
   TODO:
