--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,3 +1,6 @@
+@import "open-props/style"; /* core props */
+@import "open-props/colors-hsl"; /* HSL variants */
+
 html {
   font-size: 16px;
   scroll-behavior: smooth;
