feat: add DifficultySelector component and integrate it into GameBoard

--- a/src/components/GameBoard.module.css
+++ b/src/components/GameBoard.module.css
@@ -1,8 +1,9 @@
 .container {
   margin: 20px;
+  margin-top: 50px;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  flex-direction: column;
+  gap: 10px;
 }
 
 .gameBoardContainer {
