fix: install shadcn to help load css utills it needs for ToogleGroup

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -3,7 +3,8 @@
 @import "open-props/colors-hsl"; /* HSL variants */
 @import "tailwindcss";
 @import "tw-animate-css";
-
+@import "shadcn/tailwind.css";
+@source "../components/ui";
 @plugin "tailwindcss-animate";
 
 @custom-variant dark (&:is(.dark *));
